# haling

./: BNF  README.md  haling.cabal
lib/: Prelude.hs
src/: Declar.hs  Environment.hs  Eval.hs  Parser.hs  Syntax.hs  Typing.hs
src-exec/: main.hs
test/: EvalSpec.hs  ParserSpec.hs  TypingSpec.hs
