name: haling
version: 0.1
author: asi1024, yu-i9
synopsis: Haskell-like interpreter girl bot
cabal-version: >= 1.10
build-type: Simple

library
    Hs-source-dirs: src
    Default-Language: Haskell2010
    build-depends: base >= 4 && < 5
                 , parsec == 3.1.8
                 , transformers == 0.3.0.0
    exposed-modules:
      Declar
      Eval
      Parser
      Syntax
      Typing
    ghc-options:   -Wall

executable main
    Hs-source-dirs: src-exec
    Default-Language: Haskell2010
    main-is:  main.hs
    build-depends: base >= 4 && < 5
                 , haling
    ghc-options:   -Wall

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base >= 4 && < 5
               , hspec == 2.1.4
               , haling
  ghc-options: -Wall
